# TrueFlow

./: .env.example  .gitignore  BUG_FIX_LOG.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_SECURITY_REVIEW.md  GATEWAY_FEATURES.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_REVIEW_VAULT_ENCRYPTION.md  api_endpoint_verification.md  competitive_analysis.md  dashboard_api_mapping.md  docker-compose.test.yml  docker-compose.yml  package-lock.json
gateway/: Cargo.toml  Dockerfile
gateway/migrations/: 041_token_guardrail_header_mode.sql  042_spend_cap_overrun.sql  043_token_user_attribution.sql  044_token_purpose.sql  045_supabase_user_sync.sql  046_analytics_indexes.sql  047_user_last_project.sql  048_allowed_providers.sql  049_vault_backend.sql  052_azure_key_vault_config.sql  053_hashicorp_kv_config.sql  054_azure_user_assigned_identity.sql  055_secret_references.sql
gateway/src/: cache.rs  cli.rs  config.rs  errors.rs  lib.rs  main.rs  rotation.rs  utils.rs
gateway/src/api/: analytics.rs  config.rs  error_responses.rs  experiment_handlers.rs  guardrail_presets.rs  handlers.rs  mcp_handlers.rs  mod.rs  prompt_handlers.rs
gateway/src/api/handlers/: analytics.rs  approvals.rs  audit.rs  auth.rs  credentials.rs  dtos.rs  helpers.rs  mod.rs  model_access.rs  notifications.rs  policies.rs  pricing.rs  projects.rs  secret_references.rs  services.rs  sessions.rs  settings.rs  spend_caps.rs  teams.rs  tokens.rs  users.rs  webhooks.rs
gateway/src/iac/: client.rs  diff.rs  mod.rs  schema.rs
gateway/src/jobs/: approval_expiry.rs  budget_checker.rs  cleanup.rs  session_cleanup.rs
gateway/src/mcp/: client.rs  oauth.rs  registry.rs  types.rs
gateway/src/middleware/: anomaly.rs  audit.rs  datadog.rs  external_guardrail.rs  fields.rs  langfuse.rs  mcp.rs  metrics.rs  mod.rs  model_access.rs  observer.rs  oidc.rs  pii_vault.rs  policy.rs  policy_scope.rs  rbac.rs  redact.rs  sanitize.rs  spend.rs  teams.rs
gateway/src/middleware/engine/: actions.rs  evaluate.rs  mod.rs  operators.rs  tests.rs
gateway/src/middleware/guardrail/: mod.rs  patterns.rs  schema.rs  tests.rs
gateway/src/middleware/pii/: mod.rs  presidio.rs
gateway/src/models/: analytics.rs  audit.rs  cost.rs  latency_cache.rs  llm.rs  mod.rs  policy.rs  pricing_cache.rs  secret_reference.rs
gateway/src/notification/: slack.rs  webhook.rs
gateway/src/proxy/: handler.rs  loadbalancer.rs  model_router.rs  post_flight.rs  realtime.rs  response_cache.rs  retry.rs  sigv4.rs  smart_router.rs  stream.rs  stream_bridge.rs  transform.rs  upstream.rs
gateway/src/proxy/handler/: audit.rs  core.rs  headers.rs  security.rs
gateway/src/proxy/model_router/: bedrock.rs  error.rs  headers.rs  mod.rs  request.rs  response.rs  streaming.rs  tests.rs  url_rewrite.rs
gateway/src/store/: payload_store.rs  postgres.rs
gateway/src/store/postgres/: analytics.rs  api_keys.rs  approvals.rs  audit.rs  credentials.rs  mcp.rs  mod.rs  notifications.rs  oidc.rs  policies.rs  pricing.rs  projects.rs  prompts.rs  secret_references.rs  services.rs  sessions.rs  settings.rs  tests.rs  tokens.rs  types.rs  usage.rs  users.rs
gateway/src/vault/: azure_key_vault.rs  builtin.rs  hashicorp.rs  hashicorp_common.rs  hashicorp_kv.rs  mock.rs  mod.rs  secret_cache.rs
gateway/tests/: adversarial_integration.rs  adversarial_unit.rs  chaos_tests.rs  enterprise_features.rs  full_path.rs  integration.rs  observability.rs  policy_scope_validation.rs  rbac_teams_lb.rs  secret_references_test.rs  security_and_prompts.rs
gateway/tests/loadtest/: README.md  package.json  run.sh
gateway/tests/loadtest/utils/: setup.js
sdk/python/: README.md  pyproject.toml
sdk/python/ailink/: __init__.py  _logging.py  client.py  exceptions.py  policy.py  types.py
sdk/python/trueflow/: __init__.py  client.py  decorators.py  types.py
(+337 files in other folders)
