[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
description = "TrueFlow — Secure API Gateway for AI Agents"

[features]
# Enable test-only backdoor headers (X-TrueFlow-Test-Cost etc.)
# NEVER enable this in production. Build with: cargo build --features test-hooks
test-hooks = []

[lib]
name = "gateway"
path = "src/lib.rs"

[[bin]]
name = "trueflow"
path = "src/main.rs"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["util", "timeout", "limit", "load-shed"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full", "set-header", "request-id"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "rust_decimal"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
dashmap = "5"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# crypto
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
jsonwebtoken = "9"

# utilities
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4", "v5"] }
rust_decimal = { version = "1.33", features = ["db-postgres"] }
async-trait = "0.1"
dotenvy = "0.15"
hex = "0.4"
urlencoding = "2"
zeroize = "1"
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
url = "2"

# upstream proxy
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# streams
futures = "0.3"
tokio-stream = "0.1"

# policy matching
regex = "1"
once_cell = "1.18"
jsonschema = { version = "0.17", default-features = false }

# payload offloading (S3/MinIO/GCS/local filesystem)
object_store = { version = "0.11", features = ["aws", "gcp", "azure", "http"] }
zstd = "0.13"

# resilience
reqwest-middleware = "0.3"
reqwest-retry = "0.7"

# opentelemetry
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14"
tracing-opentelemetry = "0.22"
bytes = "1.11.1"

# observability export
prometheus = "0.13"
cadence = "1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true    # Enable Link Time Optimization.
codegen-units = 1 # Maximize size reduction optimization

